# Sprint_1

./: .env  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.cfg  sql_app.db  test.db
CommonAssessmentTool/: initialize_data.py
CommonAssessmentTool/app/: database.py  enums.py  main.py  models.py
CommonAssessmentTool/app/auth/: router.py
CommonAssessmentTool/app/clients/: router.py  schema.py
CommonAssessmentTool/app/clients/service/: client_service.py  logic.py
CommonAssessmentTool/tests/: conftest.py  test_auth.py  test_clients.py
src/: .gitignore  .pylintrc  Dockerfile  MANIFEST.in  README.md
src/CommonAssessmentTool/: initialize_data.py
src/CommonAssessmentTool/app/: database.py  enums.py  main.py  models.py
src/CommonAssessmentTool/app/auth/: router.py
src/CommonAssessmentTool/app/clients/: router.py
src/CommonAssessmentTool/app/clients/service/: client_service.py  model.py
src/CommonAssessmentTool/app/ml/: ml_utils.py  model_manager.py  models.py  router.py
src/CommonAssessmentTool/tests/: conftest.py  test_auth.py  test_clients.py  test_model_api.py
