[metadata]
name = CommonAssessmentTool
version = 0.2.0
author = Cole Perry
author_email = perry.col@northeastern.edu
description = "A Python package for Common Assessment Tool"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    fastapi
    uvicorn
    SQLAlchemy
    pandas
    pydantic
    numpy
    scikit-learn

[options.extras_require]
dev =
    black
    flake8
    pylint
    mypy
    pytest
